--- a/src/app/ngx-datetimepicker/ngx-datepicker/ngx-datepicker.component.html
+++ b/src/app/ngx-datetimepicker/ngx-datepicker/ngx-datepicker.component.html
@@ -4,17 +4,17 @@
 		(blur)='onBlur()'
 >
 
-<div class='ng2-dtpicker-date-box' *ngIf='isDateBoxOpen' (mousedown)="handleMousedown($event)">
+<div class='ngx-dtpicker-date-box' *ngIf='isDateBoxOpen' (mousedown)="handleMousedown($event)">
 
 	<!---- date header --->
-	<div class='ng2-dtpicker-date-header'>
+	<div class='ngx-dtpicker-date-header'>
 		<button type="button" class='btn-prev' (click)='handleClickPrevMonth()'></button>
 		<button type="button" class='btn-today' (click)='handleClickThisMonth()'></button>
 		<div class='header-label month' (click)='handleClickMonthYearSelect($event, 1)'>
 			<span>{{months[date.month]}}</span><i></i>
-			<div class='ng2-dtpicker-select' *ngIf='selectOpen == 1' appScrollToTarget>
+			<div class='ngx-date-picker-select' *ngIf='selectOpen == 1' appScrollToTarget>
 				<div appOffsetTop
-					 class='ng2-dtpicker-select-option'
+					 class='ngx-date-picker-select-option'
 				     *ngFor='let month of months; let i = index'
 					  [class.active]='date.month == i'
 					 (click)='$event.stopPropagation(); handleClickMonthOption(i)'> {{month}} </div>
@@ -22,10 +22,10 @@
 		</div>
 		<div class='header-label year' (click)='handleClickMonthYearSelect($event, 2)'>
 			<span>{{date.year}}</span><i></i>
-			<div class='ng2-dtpicker-select' *ngIf='selectOpen == 2' appScrollToTarget>
+			<div class='ngx-date-picker-select' *ngIf='selectOpen == 2' appScrollToTarget>
 				<div appOffsetTop
 				     *ngFor='let year of years'
-				      class='ng2-dtpicker-select-option'
+				      class='ngx-date-picker-select-option'
 				     [class.active]='date.year == year'
 					 (click)='$event.stopPropagation(); handleClickYearOption(year)'> {{year}} </div>
 			</div>
@@ -34,7 +34,7 @@
 	</div>
 
 	<!---- calendar --->
-	<div class='ng2-dtpicker-calendar'>
+	<div class='ngx-dtpicker-calendar'>
 		<div class='cell cell-header' *ngFor='let weekday of dayOfWeek'>{{weekday}}</div>
 		<div 	class='cell' 
 				*ngFor='let day of days' 
